<resources>
    <string name="app_name">Consulte seu CEP</string>

    <!--Home Fragment-->
    <string name="text_view_consulte_seu_cep">Consulte seu CEP</string>
    <string name="edit_text_digite_seu_cep">Digite seu CEP</string>
    <string name="button_consultar">Consultar</string>
    <string name="dialog_erro_cep">Cep invalido, ele tem de ter 8 digitos</string>

    <!--Consult Fragment-->
    <string name="text_view_toolbar_consulta">Consulta</string>
    <string name="text_view_consult_cep">CEP</string>
    <string name="text_view_consult_estado">ESTADO</string>
    <string name="text_view_consult_cidade">CIDADE</string>
    <string name="text_view_consult_endereco">ENDEREÇO</string>
    <string name="button_consult_voltar">voltar</string>
    <string name="text_view_consult_bairro">BAIRRO</string>
    <string name="dialog_message_fail_api">Ocorreu um erro, por favor tente mais tarde.</string>
    <string name="dialog_message_fail_server">Ocorreu um erro no servidor, por favor tente mais tarde.</string>
    <string name="dialog_message_bad_request">Ocorreu um erro, reporte ao administrador.</string>
    <string name="dialog_message_not_found">CEP invalido, por favor tente novamente.</string>
    <string name="dialog_message_fail_internet">Ocorreu um erro, por favor verifique sua internet.</string>

    <!--Dialog-->
    <string name="dialog_text_generic_negative_bnt">OK</string>
    <string name="dialog_text_generic_title">ERRO!</string>
    <string name="dialog_text_generic_message">Erro generico ocorrido!</string>

    <!--History Fragment-->
    <string name="text_view_toolbar_historico">Historico</string>
    <string name="bnt_history_limpar">Limpar</string>
    <string name="bnt_history_voltar">Voltar</string>
    <string name="button_consult_historico">Historico</string>
    <string name="button_historico">Historico</string>

    <!--Selected Cep Fragment-->
    <string name="text_view_toolbar_historico_selecionado">Historico Selecionado</string>
    <string name="text_view_selected_cep">CEP</string>
    <string name="text_view_selected_estado">ESTADO</string>
    <string name="text_view_selected_cidade">CIDADE</string>
    <string name="text_view_selected_bairro">BAIRRO</string>
    <string name="text_view_selected_endereco">ENDEREÇO</string>

</resources>