<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="historyViewModel"
            type="com.project.consultcep.ui.historyFragment.HistoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ui.historyFragment.HistoryFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/historyToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back_arrow">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_toolbar_historico"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewHistory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dimen_horizontal_margin"
            app:layout_constraintBottom_toTopOf="@+id/historyButtonClean"
            app:layout_constraintTop_toBottomOf="@+id/historyToolbar" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/historyButtonClean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_horizontal_margin"
            android:background="@drawable/background_button"
            android:onClick="@{()->historyViewModel.toCleanData()}"
            android:text="@string/bnt_history_limpar"
            android:textColor="@color/yellow"
            app:layout_constraintBottom_toTopOf="@+id/historyButtonBack" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/historyButtonBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_horizontal_margin"
            android:background="@drawable/background_button"
            android:onClick="@{() -> historyViewModel.toBack()}"
            android:text="@string/bnt_history_voltar"
            android:textColor="@color/yellow"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
