<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="homeViewModel"
            type="com.project.consultcep.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/homeToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent">
            <!--app:navigationIcon="@drawable/ic_back_arrow"-->

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_consulte_seu_cep"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_horizontal_margin"
            android:background="@drawable/background_linear_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/ic_ball_cep" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/homeEditTextCep"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:background="@drawable/background_edit_text"
                android:gravity="center"
                android:hint="@string/edit_text_digite_seu_cep"
                android:inputType="number"
                android:maxLength="9" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/homeButtonConsult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_horizontal_margin"
            android:layout_marginBottom="@dimen/dimen_horizontal_margin"
            android:background="@drawable/background_button"
            android:text="@string/button_consultar"
            android:onClick="@{() -> homeViewModel.getCepOnClick()}"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>